testsuite/tests/rename/should_fail/T11592.stderr

T11592.hs:5:9: error: [GHC-10498]
    Conflicting definitions for ‘a’
    Bound at: T11592.hs:5:9
              T11592.hs:5:14

T11592.hs:7:11: error: [GHC-10498]
    Conflicting definitions for ‘a’
    Bound at: T11592.hs:7:11
              T11592.hs:7:16

T11592.hs:8:11: error: [GHC-10498]
    Conflicting definitions for ‘a’
    Bound at: T11592.hs:8:11
              T11592.hs:8:18

T11592.hs:10:13: error: [GHC-10498]
    Conflicting definitions for ‘a’
    Bound at: T11592.hs:10:13
              T11592.hs:10:20
